--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@prisma/client": "^4.13.0",
     "@types/react": "18.2.5",
     "@types/react-dom": "18.2.4",
+    "@uploadthing/react": "^3.0.2",
     "autoprefixer": "10.4.14",
     "eslint": "8.39.0",
     "eslint-config-next": "13.4.1",
@@ -19,8 +20,10 @@
     "postcss": "8.4.23",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-dropzone": "^14.2.3",
     "react-hot-toast": "^2.4.1",
-    "tailwindcss": "3.3.2"
+    "tailwindcss": "3.3.2",
+    "uploadthing": "^3.0.2"
   },
   "devDependencies": {
     "@types/node": "^20.1.0",
