--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@prisma/client": "^4.13.0",
+    "@tailwindcss/forms": "^0.5.3",
     "@types/react": "18.2.5",
     "@types/react-dom": "18.2.4",
     "@uploadthing/react": "^3.0.2",
