--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@clerk/nextjs": "^4.17.4",
     "@prisma/client": "^4.13.0",
     "@tailwindcss/forms": "^0.5.3",
     "@types/react": "18.2.5",
